# tetris-C

./: CMakeLists.txt  README.md
cmake/: sdl2.cmake
